NIFI-13781 Updated DataTypeUtils with syntax optimizations from recent Java versions (#9302)
Signed-off-by: David Handermann <exceptionfactory@apache.org>